refact: making methods better to read